@@ -3,8 +3,11 @@ package com.fade.faparchiving.service;
 import com.fade.attachment.constant.AttachmentLinkType;
 import com.fade.attachment.constant.AttachmentLinkableType;
 import com.fade.attachment.service.AttachmentService;
+import com.fade.category.dto.response.FindCategoryListResponse;
 import com.fade.faparchiving.dto.response.FindFapArchivingResponse;
 import com.fade.faparchiving.repository.FapArchivingRepository;
+import com.fade.member.service.MemberCommonService;
+import com.fade.subscribe.repository.SubscribeRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,25 +22,48 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class FapArchivingService {
 
+    private final MemberCommonService memberCommonService;
     private final FapArchivingRepository fapArchivingRepository;
     private final AttachmentService attachmentService;
+    private final SubscribeRepository subscribeRepository;
 
     @Transactional(readOnly = true)
-    public List<FindFapArchivingResponse> findFapArchivingItems(LocalDate selectedDate) {
+    public FindFapArchivingResponse findFapArchivingItems(Long memberId, LocalDate selectedDate) {
+        final var member = memberCommonService.findById(memberId);
         LocalDateTime startOfDate = selectedDate.withDayOfMonth(1).atStartOfDay();
         LocalDateTime endOfDate = selectedDate.withDayOfMonth(selectedDate.lengthOfMonth()).atTime(LocalTime.MAX);
 
         final var fapArchivingItems = this.fapArchivingRepository.findFapArchivingItems(startOfDate, endOfDate);
 
-        return fapArchivingItems.stream()
-                .map(fapArchivingItem -> new FindFapArchivingResponse(
+        return new FindFapArchivingResponse(
+                fapArchivingItems.stream().map(fapArchivingItem -> new FindFapArchivingResponse.FindFapArchivingItemResponse(
                         fapArchivingItem.getFeed().getId(),
-                        fapArchivingItem.getMember().getId(),
                         this.attachmentService.getUrl(
                                 fapArchivingItem.getFeed().getId(),
                                 AttachmentLinkableType.FEED,
                                 AttachmentLinkType.IMAGE
-                        )
-                )).collect(Collectors.toList());
+                        ),
+                        fapArchivingItem.getFeed().getStyles().stream().map(style -> new FindFapArchivingResponse.FindFapArchivingStyleResponse(
+                                style.getId()
+                        )).toList(),
+                        fapArchivingItem.getFeed().getFeedOutfitList().stream().map(outfit -> new FindFapArchivingResponse.FindFapArchivingOutfitResponse(
+                                outfit.getId(),
+                                outfit.getBrandName(),
+                                outfit.getDetails(),
+                                null
+                        )).toList(),
+                        fapArchivingItem.getMember().getId(),
+                        isSubscribed(member.getId(), fapArchivingItem.getMember().getId()),
+                        isMine(member.getId(), fapArchivingItem.getMember().getId())
+                )).toList()
+        );
+    }
+
+    private boolean isSubscribed(Long fromMemberId, Long toMemberId) {
+        return subscribeRepository.existsByFromMemberIdAndToMemberId(fromMemberId, toMemberId);
+    }
+
+    private boolean isMine(Long memberId, Long fapId) {
+        return memberId.equals(fapId);
     }
 }
